--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-in-class-exercise\biden-class-exercise_data
+in-class-exercise/biden-class-exercise_data
 in-class-exercise/biden-class-exercise.aup
